Customized scrollbar and fixed background

--- a/project3/weather-app/src/App.css
+++ b/project3/weather-app/src/App.css
@@ -1,5 +1,10 @@
-html,
-body {
-  height: 100%;
+html {
+  min-height: 100%;
   background: linear-gradient(0deg, #062c45 0%, #020d14 100%);
+}
+#savedcities::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(180deg, #020d14 0%, #062c45 99%);
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+  border-radius: 100px;
+  border: 2px solid #9ca3af;
 }
